--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "node-fetch": "^2.6.1",
+    "node-spotify-api": "^1.1.1",
     "tedis": "^0.1.12",
     "winston": "^3.3.3"
   },
