--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     [
       "@babel/preset-env",
       {
-        "debug": true,
+        "debug": false,
         "targets": {
           "node": "current"
         }
