--- a/package.json
+++ b/package.json
@@ -1,37 +1,53 @@
 {
   "name": "content-manager",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "The musicorum content manager, desired to manage and save cache of data",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node -r dotenv/config src/index.js",
+    "dev": "babel-node --extensions \".ts\" -r dotenv/config src/index.ts",
     "clean": "rm -rf ./dist && mkdir dist",
-    "build": "npm run clean && babel src -d dist"
+    "build": "npm run clean && babel src -d dist --extensions \".ts\""
   },
   "author": "Matheus Dias <methidezeeni@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/node": "^7.10.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "chalk": "^4.1.0",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@prisma/client": "^2.29.0",
+    "@types/signale": "^1.4.2",
+    "chalk": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2",
+    "mongodb": "^3.6.9",
     "node-fetch": "^2.6.1",
     "node-spotify-api": "^1.1.1",
-    "tedis": "^0.1.12",
-    "winston": "^3.3.3"
+    "signale": "^1.4.0",
+    "tedis": "^0.1.12"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "eslint": "^7.9.0",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^15.12.4",
+    "@types/node-fetch": "^2.5.12",
+    "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "dotenv": "^8.6.0",
+    "eslint": "^7.29.0",
     "eslint-config-standard": "^14.1.1",
-    "nodemon": "^2.0.4"
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "nodemon": "^2.0.7",
+    "prisma": "^2.29.0",
+    "typescript": "^4.3.4"
   }
 }
