--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,21 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch dev",
-      "runtimeExecutable": "npm",
+      "name": "Debug",
+      "program": "${workspaceFolder}/src/index.ts",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node",
       "runtimeArgs": [
-          "run-script",
-          "dev"
+        "--nolazy",
+        "--extensions",
+        "\".ts\""
       ],
+      "env": {
+        "BABEL_ENV": "development"
+      },
       "envFile": "${workspaceFolder}/.env",
-      "port": 9229,
-      "skipFiles": [
-          "<node_internals>/**"
-      ]
-  }
+    }
   ]
 }
