--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The musicorum content manager, desired to manage and save cache of data",
   "main": "dist/index.js",
   "scripts": {
-    "start": "npx prisma db push --skip-generate && node dist/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "babel-node --extensions \".ts\" -r dotenv/config src/index.ts",
     "clean": "rm -rf ./dist && mkdir dist",
