new color palette and resources schema

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 PORT=8080
-MONGO_URI=
+DATABASE_URL=postgresql://postgres:password@localhost/resources
 SPOTIFY_ID=
 SPOTIFY_SECRET=
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASS=
+REDIS_HOST=localhost
+REDIS_PASS=password
