--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "content-manager",
-  "version": "1.1.0",
+  "version": "3.0.0",
   "description": "The musicorum content manager, desired to manage and save cache of data",
   "main": "dist/index.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.9",
     "node-fetch": "^2.6.1",
     "node-spotify-api": "^1.1.1",
+    "node-vibrant": "^3.2.1-alpha.1",
     "signale": "^1.4.0",
     "tedis": "^0.1.12"
   },
@@ -26,7 +27,6 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
-    "@types/signale": "^1.4.2",
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^15.12.4",
     "@types/node-fetch": "^2.5.12",
+    "@types/signale": "^1.4.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
