--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "content-manager",
-  "version": "3.0.0",
+  "version": "3.1.2",
   "description": "The musicorum content manager, desired to manage and save cache of data",
   "main": "dist/index.js",
   "scripts": {
@@ -14,9 +14,12 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@prisma/client": "^2.29.0",
+    "colorette": "^2.0.16",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lastfm-typed": "^2.0.1",
     "mongodb": "^3.6.9",
+    "nanoid": "^3.3.4",
     "node-fetch": "^2.6.1",
     "node-spotify-api": "^1.1.1",
     "node-vibrant": "^3.2.1-alpha.1",
