--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "content-manager",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "The musicorum content manager, desired to manage and save cache of data",
   "main": "dist/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "node-fetch": "^2.6.1",
     "node-spotify-api": "^1.1.1",
     "node-vibrant": "^3.2.1-alpha.1",
+    "prom-client": "^14.0.1",
     "signale": "^1.4.0",
     "tedis": "^0.1.12"
   },
