--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
     },
     "rules": {
         "camelcase": "off",
-        "@typescript-eslint/explicit-module-boundary-types": "off"
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "no-useless-constructor": "off"
     },
     "plugins": [
         "@typescript-eslint"
