--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "content-manager",
-  "version": "3.1.3",
+  "version": "3.2.0",
   "description": "The musicorum content manager, desired to manage and save cache of data",
   "main": "dist/index.js",
   "scripts": {
@@ -41,12 +41,14 @@
     "@types/node-fetch": "^2.5.12",
     "@types/signale": "^1.4.2",
     "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^4.28.0",
     "dotenv": "^8.6.0",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
