--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,18 +5,21 @@ on:
   push:
     branches:
       - master
-      - dev
-      - next
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Build and publish to registry
-        uses: docker/build-push-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: musicorum/content-manager
-          tag_with_ref: true
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: musicorum/resource-manager:latest
