feat: lastfm artist images

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+CORS_ORIGINS='*'
+DATABASE_URL=postgres://postgres:password@localhost:5432/resources
 PORT=8080
-DATABASE_URL=postgresql://postgres:password@localhost/resources
-SPOTIFY_ID=
-SPOTIFY_SECRET=
 REDIS_HOST=localhost
 REDIS_PASS=password
+REDIS_PORT=6379
+SPOTIFY_ID=
+SPOTIFY_SECRET=
+LASTFM_KEY=
